--- a/nuplatform.tex
+++ b/nuplatform.tex
@@ -35,21 +35,21 @@ The outer steel support structure for the cryostat will be prefabricated in piec
 
 The TPC and PDS detector components will be manufactured and submitted to quality assurance procedures at one or more of the potential DUNE detector component production sites. Successively, components will be shipped to CERN for further testing and final assembly into the cryostat. This approach will begin the preparations for the various production sites for the first 10~kt module of the DUNE far detector.
 
-The interior of the cryostat will be prepared prior to the installation of the TPC.  A series of I-beam support rails will be suspended below the top surface of the cryostat membrane by a series of hangers.  These hangers will be structurally supported by an independent structure above the cryostat.  Decoupling the TPC support from the cryostat structure eliminates the movement of the TPC with the flexure of the cryostat structure from the filling and internal pressure changes of the Argon inside.  The hangers will pass through the top of the cryostat to the independent structure inside a bellows type feedthrough.  These feedthroughs need to be designed to minimize the heat flow into the cryogenic volume.  For the CPAs, the support rails and hangers need to be electrically isolated due to high voltage concerns.  To preserve the ability to reverse the order of the TPC components, all of the support points will be designed to the maximum set of requirements regarding loads and clearances.  
+The interior of the cryostat will be prepared prior to the installation of the TPC.  Several I-beam support rails will be suspended below the top surface of the cryostat membrane by a series of hangers.  These hangers will be supported by an independent structure above the cryostat.  Decoupling the TPC support from the cryostat structure eliminates the movement of the TPC with the flexure of the cryostat structure from the filling and internal pressure changes of the Argon inside.  The hangers will pass through the top of the cryostat to the independent structure inside a bellows type feedthrough.  These feedthroughs need to be designed to minimize the heat flow into the cryogenic volume.  For the CPAs, the support rails and hangers need to be electrically isolated due to high voltage concerns.  To preserve the ability to reverse the order of the TPC components, all of the support points will be designed to the maximum set of requirements regarding loads and clearances.  
 
-There will be a series of feedthrough flanges located along each of the support rails.  These will be cryogenic flanges where the services for the TPC components can pass through the top of the cryostat.  It is foreseen that each CPA row will require one feedthrough for the high voltage probe to bring in the drift voltage.  The drift voltage is 500 V/cm.  For a drift distance of 3.6~m and 2.5~m, the probe voltages will be 180~kV and 125~kV respectively.  There will be one service feedthrough for each of the APAs.  These feedthroughs will include high speed data connections, bias voltages for the wire planes, control and power for the cold electronics.  
+There will be a series of feedthrough flanges located along each of the support rails.  These will be cryogenic flanges where the services for the TPC components can pass through the top of the cryostat.  It is foreseen that the CPA row will require one feedthrough for the high voltage probe to bring in the drift voltage.  The drift field is 500 V/cm.  For a drift distance of 3.6~m and 2.5~m, the probe voltages will be 180~kV and 125~kV, respectively.  There will be one service feedthrough for each of the APAs.  These feedthroughs will include high speed data connections, bias voltages for the wire planes, control and power for the cold electronics.  
 
 The main TPC components will be installed through large hatches in the top of the cryostat.  This is 
 similar to the installation method intended for the detector at the DUNE far site.  These hatches will have an 
 aperture approximately 2.0 m wide and 3.5 m long.  Each APA and CPA panel will be carefully tested after transport into the clean area and before installation into the cryostat. Immediately after a panel is installed it will be rechecked. The serial installation of the APAs along the rails means that removing and replacing one of the early panels in the row after others are installed would be very costly in effort and time. Therefore, to minimize the risk of damage, as much work around already installed panels as possible will be completed before proceeding with further panels.
  
-In general, APA panels will be installed in order starting with the panel furthest from the hatch side of the cryostat and progressing back towards the hatch. The upper field cage will be installed in stages as the installation of APAs and CPA progresses.  After the APAs are attached to the support rods the electrical connections will be made to electrical cables that were already dressed to the support beams and electrical testing will begin. Periodic electrical testing will continue to assure that nothing gets  damaged during the additional work around the installed APAs.  
+In general, APA panels will be installed in order starting with the panel furthest from the hatch side of the cryostat and progressing back towards the hatch. The upper field cage will be installed in stages as the installation of APAs and CPA panels progresses.  After the APAs are attached to the support rods the electrical connections will be made to electrical cables that were already dressed to the support beams and electrical testing will begin. Periodic electrical testing will continue to assure that nothing gets  damaged during the additional work around the installed APAs.  
 
 The TPC installation will be performed in three stages, each in a separate location. First, in the clean room vestibule, a crew will move the APA and CPA panels from storage racks, rotate to the vertical position and move them into the cryostat. Secondly, in the panel-staging area immediately below the equipment hatch of the cryostat, 
 % CHECK THIS! I TRIED TO INTERPRET RUSS'S COMMENTS. -- ANNE
-a second crew will transfer the panels from the crane to the staging platform, where the crew inside the cryostat will connect the panels to the rails within the cryostat. A third crew will reposition the movable scaffolding and use the scaffold to make the mechanical and electrical connections at the top for each APA and CPA as they are moved into position.  
+a second crew will transfer the panels from the crane to the staging platform, where the crew inside the cryostat will connect the panels to the rails within the cryostat. A third crew will reposition the movable scaffolding and use the scaffold to make the mechanical and electrical connections at the top for each APA and CPA once they are moved into position.  
 
-The requirements for alignment and survey of the TPC are under development. Since there are many cosmic rays in the surface detector and beam events, significant corrections can be made for any misalignment of the TPC. The current plan includes using a laser guide or optical transit and the adjustment features of the support rods for the TPC to align the top edges of the APAs in the TPC to be straight, level and parallel within a few millimeters. The alignment of the TPC in other dimensions will depend on the internal connecting features of the TPC.  The timing of the survey will depend on understanding when during the installation process the hanging TPC elements are in a dimensionally stable state. The required accuracy of the survey is not expected to be more precise than a few millimeters.  
+The requirements for alignment and survey of the TPC are under development. Since there are many cosmic rays in this detector due to its location on the surface, significant corrections can be made for any misalignments of the TPC. The current plan includes using a laser guide or optical transit and the adjustment features of the support rods for the TPC to align the top edges of the APAs in the TPC to be straight, level and parallel within a few millimeters. The alignment of the TPC in other dimensions will depend on the internal connecting features of the TPC.  The timing of the survey will depend on understanding when during the installation process the hanging TPC elements are in a dimensionally stable state. The required accuracy of the survey is not expected to be more precise than a few millimeters.  
 
 
 \subsection{Infrastructure}
