--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -310,8 +310,8 @@ large uncertainties from shower modeling.
   \centering
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/protons_1gev_v0}
 %\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/protons_3gev_v0}
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pr1GeV_1}
-\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pr3GeV_1}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pr1GeV_v2a}
+\includegraphics[width=0.49\textwidth,height=5.0cm]{figures/pr3GeV_v2a}
   \caption{Fraction of true energy deposited by interacting protons of 1~GeV/c (left) and
 3~GeV/c (right) momenta simulated using FLUKA~\cite{fluka05}.
 }
