Corrected caption for Figure 2

--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -75,8 +75,7 @@ will likely result in larger effects on the sensitivities.
 %\includegraphics[width=0.49\textwidth,height=6.7cm]{figures/deltacp_escale_sens}
   \caption{One scenario for the effect of 1-sigma  neutrino energy scale uncertainties on
 DUNE projected sensitivity for mass hierarchy (left) and $\delta_{CP}$ 
-(right).
-A 115 kt-MW-years exposure in each of neutrino and antineutrino modes is assumed.
+(right).  In the left figure, the reference beam conditions were chosen so that the case with no energy scale systematic provides a significance of at least 5$\sigma$ for all values of $\delta_{CP}$. In the right figure, the reference beam conditions were chosen so that the case with no energy scale systematic provides a significance of at least 3$\sigma$ for 75\% of $\delta_{CP}$ values.  Sensitivities are for true normal hierarchy; neutrino mass hierarchy and $\theta_{23}$ octant are assumed to be unknown.
 % to one sigma neutrino energy scale uncertainties as indicated.
 %If energy scale uncertainties can be controlled at the appropriate levels, DUNE can achieve 
 %at least 5$\sigma$ sensitivity on mass hierarchy determination for 100\% of $\delta_{CP}$ values and
