--- a/introduction.tex
+++ b/introduction.tex
@@ -59,7 +59,7 @@ More specifically, the goals of the prototype detector and beam test measurement
 \end{enumerate}
 \item study e/$\gamma$-separation capabilities
 \item measure event reconstruction efficiencies as a function of energy and particle type
-\item measure performance of particle identification algorithms as function of energy and for real detector conditions
+\item measure performance of particle identification algorithms as function of energy 
 \item assess single particle track calibration and reconstruction
 %		-- characterize performance of algorithms
 \item validate accuracy of Monte Carlo simulations for relevant energy ranges as well as directions with respect to the wire-plane geometry
