--- a/bibliography.tex
+++ b/bibliography.tex
@@ -65,6 +65,8 @@ detector in the CNGS neutrino beam", ICARUS Collaboration, Eur. Phys. J. C (2013
   %
   %cites from singlephasedet input: APA-CP-FieldCage
   %
+\bibitem{mat-test-stand} "A system to test the effects of materials on the electron drift lifetime in liquid argon and observations on the effect of water", R. Andrews, et al., Nucl. Instrum. Meth. A608 (2009) 251-258
+
 \bibitem{spacecharge} LBNE docdb~\#6471, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6471}
 
 \bibitem{CFD} LBNE docdb~\#6140, \url{http://lbne2-docdb.fnal.gov:8080/cgi-bin/ShowDocument?docid=6140}
