--- a/execsum.tex
+++ b/execsum.tex
@@ -23,7 +23,7 @@ The anticipated beam measurement program
 is expected to last several weeks and should ideally be conducted prior to the second 
 long shutdown of the LHC in 2018. 
 
-The DUNE collaboration has identified the CERN single-phase prototype detector and beam test as a logical and critically important next
+The DUNE collaboration has identified the CERN single-phase LAr prototype detector (DUNE-PT) and beam test as a logical and critically important next
 step towards its ultimate goal of building and running the DUNE experiment \cite{dunecdr}. The anticipated proximity to and synergies with WA105 enhances collaboration and is expected to foster community building. We plan to work towards a direct detector performance comparison of single and double phase LAr data in this well characterized test environment. 
 %
 A strong, experienced and growing team within the DUNE collaboration is in place to carry out the proposed activities.
