--- a/introduction.tex
+++ b/introduction.tex
@@ -11,7 +11,7 @@ and the interface to the CERN Neutrino Platform in Section~\ref{nuplatform}. We 
 
 \subsection{Goals for the prototype detector and beam test}
 
-The CERN single-phase prototype detector is a crucial milestone for the DUNE experiment that will inform the construction and operation of the first 10~kt DUNE far detector module.  The prototype detector and beam test serve two principal functions. 
+The CERN single-phase liquid argon prototype detector (DUNE-PT) is a crucial milestone for the DUNE experiment that will inform the construction and operation of the first 10~kt DUNE far detector module.  The prototype detector and beam test serve two principal functions. 
 
 The first goal is 
 to measure and study the response of the detector to charged particles of different types and energies. 
@@ -41,7 +41,7 @@ In particular, the following checks are anticipated:
   \item identifying flaws and inefficiencies in the manufacturing process
 \end{enumerate}
 
-Experience gained from construction, installation and commissioning of the CERN single-phase prototype detector 
+Experience gained from construction, installation and commissioning of DUNE-PT 
 as well as performance tests with cosmic ray data are expected to lead to a detector optimization of equivalent phases 
 for the DUNE far detector. 
 
