--- a/detbeamtest.tex
+++ b/detbeamtest.tex
@@ -14,7 +14,7 @@ Other important physics goals include sensitive searches for proton decay and de
 The full power of the DUNE experiment to perform a careful test of the three-flavor paradigm will come from a measurement of the detected neutrino spectral shape over a broad energy range.  For a baseline of 1300 km the first maximum of the oscillation probability occurs in the 2 - 3 GeV energy range with additional oscillation maxima at lower energies so the high intensity neutrino flux must be maximized in this energy range. It is desirable to have sufficient flux in the sub-GeV energy range to enable a measurement of the rapidly changing spectral shape in the region of the second maximum in the oscillation probability. It is this requirement on the neutrino energy spectrum, and the subsequent energy range of charged particles that result from their interactions, that determines the performance requirements for the DUNE detectors. 
 
 
-One of the main goals of the single-phase prototype test beam program is to perform measurements 
+One of the main goals of DUNE-PT test beam program is to perform measurements 
 needed to control and understand systematic uncertainties in DUNE oscillation measurements.
 %The program also includes measurements to support other important DUNE physics measurements as described below.
 %detector is intended to provide input necessary to reduce systematic uncertainties for oscillation measurements 
@@ -141,7 +141,7 @@ from $\nu_e$, $\nu_\mu$, $\bar \nu_e$ and $\bar \nu_\mu$ form the neutrino mode 
 
 %\newpage
 
-The CERN prototype detector is designed from components that match exactly the DUNE far detector reference design for the first 10~kt detector module.
+DUNE-PT is designed from components that match exactly the DUNE far detector reference design for the first 10~kt detector module.
 The test beam detector must be sufficiently large in both
 longitudinal and transverse dimensions to contain showering particles up to the energy range of interest ($\sim$10~GeV).
 Fig.~\ref{fig:containment} shows the simulated longitudinal and transverse 
