--- a/singlephasedet.tex
+++ b/singlephasedet.tex
@@ -15,7 +15,8 @@ Since the recent formation of the new DUNE collaboration a combined detector des
 Ideas from this new collaboration have the potential to modify the detector design for the additional three far detector modules
 which are foreseen for DUNE.
 The detector design described here is the LBNE detector design chosen by the DUNE collaboration as the reference design for the first 10~kt 
-detector module and also adopted as the basis for the CERN prototype detector.
+detector module and also adopted as the basis for the DUNE-PT.
+
 
 \begin{figure}[!htb]
 \centering
@@ -43,14 +44,14 @@ The engineering goals of the single-phase APA/CPA detector test can be broken in
 	 
 	 The electrical testing goals are to insure that the high voltage design is robust and that the required low electronic noise level can be achieved. As the detector scale increases so does the capacitance and the stored energy in the device. The design of the field cage and high voltage cathode planes needs to be such that HV discharge is unlikely and that if the event occurs no damage to the detector or cryostat results. The grounding and shielding of large detectors is also critical for low noise operation. By testing the full scale elements one insures that the grounding plan is fully developed and effective. Large scale tests of the resulting design will verify the electrical model of the detector. 
 
-	 Research at Fermilab utilizing the Materials Test Stand has shown that electronegative contamination to the ultra-pure argon from all materials tested is negligible if the material is under the liquid argon. This implies that the dominant source of contamination originates from the gas ullage region and the room temperature connections to the detector. Careful design of the ullage region to insure that all surfaces and feedthroughs are cold is expected to greatly reduce the sources of contamination over what exists in present detectors. 
+	 Research at Fermilab utilizing the Materials Test Stand~\cite{mat-test-stand} has shown that electronegative contamination to the ultra-pure argon from all materials tested is negligible if the material is immersed in the liquid argon. This implies that the dominant source of contamination originates from the gas ullage region and the room temperature connections to the detector. Careful design of the ullage region to insure that all surfaces and feedthroughs are cold is expected to greatly reduce the sources of contamination over what exists in present detectors. 
 	 
-\subsection{CERN prototype detector}
+\subsection{DUNE-PT}
 
 %\subsubsection{Overview of the CERN Single-Phase test Detector}
 
 This section presents the design details of a single-phase prototype detector based on the design by the former LBNE collaboration. 
-The DUNE detector design is very modular and the CERN prototype detector will be constructed from modular components of exactly the same design.
+The DUNE detector design is very modular and the DUNE-PT will be constructed from modular components of exactly the same design.
 
 \begin{figure}[htb]
 \centering
@@ -89,11 +90,11 @@ TPC (active)       & $7.0 (long) \times 7.2 (wide) \times 5.9 (high)$  \\ \hline
 TPC (external)       & $7.3 (long) \times 7.4 (wide) \times 6.2 (high)$  \\ \hline
 cryostat (internal) &  $8.9 (long) \times 7.8 (wide) \times 8.1 (high)$  \\ \hline
 \end{tabular}
-\caption{Dimensions of the single phase prototype detector.}
+\caption{Dimensions of DUNE-PT.}
 \label{table:TPC-dim}
-\end{table}
- 
-Along with the APAs and CPAs, the TPC will include a field cage that surrounds the entire assembly to ensure a uniform drift field in the TPC's active volume. 
+\end{table} 
+
+Along with the APAs and CPAs, the TPC will include a field cage that surrounds the entire assembly to ensure a uniform drift field in the TPC's active volume. -
 
 %This is a series of fiberglass I-beams for the structural elements.  These I-beams will be tiled with large copper sided FR4 panels to create the field cage.  Each panel will be connected with a series of resistors.  The field cage will also be connected to the CPAs through a capacitor assembly.
 
@@ -102,7 +103,7 @@ All of this will be supported by rows of I-beams supported from a mechanical str
 The design also foresees the option to have the two APA rows mounted at 2.5~m from the central CPA each.
 A reduced drift distance between the APA and CPA represents a deviation from the DUNE far detector design but is potentially very
 useful in order to lessen the impact of space charge effects.
-Due to the operation of the CERN prototype detector on the surface space charge 
+Due to the operation of DUNE-PT on the surface space charge 
  effects are expected to be larger than for underground operation at SURF.
 We foresee to calibrate out any space charge effects for a 3.6~m drift distance using laser beam calibration and comics. 
 At the same time we maintain the  possibility for a second test with reduced drift length if the uncertainties associated 
