--- a/photondetector.tex
+++ b/photondetector.tex
@@ -13,7 +13,8 @@ In the absence of an external electric field, a charged particle passing through
 At higher electric drift fields the number of photons will be smaller due to reduced recombination, but at 500 V/cm the yield is about 20,000 photons per MeV. Roughly one-third of the photons are prompt, 2-6~ns, and two-thirds are generated after a delay of 1.1-1.6~$\mu$s. LAr is highly transparent to the 128~nm VUV photons with a Rayleigh scattering length and absorption length of 55$\pm$5~cm \cite{rayleigh} and $>$200~cm \cite{absorption} respectively. The relatively large light yield makes the scintillation process an excellent candidate for triggering and  determination of t$_0$ for non-beam related events. Detection of the scintillation light may also be helpful in background rejection and possibly
 provide improvements for energy reconstruction.
 
-Several prototypes of photon detection systems for single phase liquid argon detectors have been developed by the former LBNE photon detector group over the past few years. There are currently three prototypes under consideration for use in the first module of the DUNE far detector, a baseline design along with two alternate designs. A decision on the design to be deployed in the CERN test will be made in late 2015. The CERN single phase prototype detector provides the first full scale test of the photon detectors which will be fully integrated into a 
+Several prototypes of photon detection systems for single phase liquid argon detectors have been developed by the former LBNE photon detector group over the past few years. There are currently three prototypes under consideration for use in the first module of the DUNE far detector, a baseline design along with two alternate designs. A decision on the design to be deployed in the CERN test will be made in late 2015. 
+DUNE-PT provides the first full scale test of the photon detectors which will be fully integrated into a 
 full scale TPC anode plane assembly. 
 
 The present reference design for the photon detection system is based on acrylic bars that are 200~cm long and 7.6~cm wide, which are coated with a layer of tetraphenyl-butadiene (TPB). The wavelength shifter converts incoming VUV (128 nm) scintillation photons
