--- a/cryo.tex
+++ b/cryo.tex
@@ -5,7 +5,7 @@
 
 %\subsection{Cryostat size from TPC dimensions }
 
-The single-phase detector test at CERN will use a membrane tank technology supported by an outer steel structure.
+DUNE-PT will use a membrane tank technology supported by an outer steel structure.
 
 The minimum internal size of the cryostat is determined from size of the TPC.  At the bottom of the 
 cryostat there needs to be a minimum of 0.36 m between the frame of the CPA and closest point on the stainless steel 
@@ -83,11 +83,11 @@ The top plate will contain two hatches for the installation of the TPCs; it will
 %
 The cryostat design for the CERN prototypes includes technical solutions that are of interested for the future needs of the DUNE program. For example the use of a cold ullage (\textless  100~K) to lower the impurities in the gas region, and of a LAr pump outside the cryostat to minimize the effect of noise, vibration and microphonics to the TPC inside the liquid argon volume.
 %
-The design parameters for the CERN prototype cryostat can be found in the Appendix.
+The design parameters for the DUNE-PT cryostat can be found in the Appendix.
 
 %\begin{table}[htpb]
 %\centering
-%\begin{tabular}{|p{.4\textwidth}|p{.5\textwidth}|}
+%\begin{tabular}{|p{.4\textwidth}|p{.5\textwidth}|}-
 %\hline
 %\textbf{Design Parameter} & \textbf{Value} \\ \hline
 %Type of structure & Membrane cryostat \\ \hline
@@ -291,12 +291,12 @@ From the dewar storage the LN2 is then transferred to a distribution facility lo
 hall. It includes a small buffer volume and an LN2 pumping station that transfers the LN2 to the argon 
 condenser and other services as needed. The low estimated heat leak of the vessel ($\sim$3.2~kW) and the 
 location inside an above ground building allow for use of an open loop system typical of other 
-installations operated at Fermilab (LAPD, LBNE 35 t prototype, MicroBooNE) and at CERN. 
+installations operated at Fermilab (LAPD, LBNE 35~t prototype, MicroBooNE) and at CERN. 
 The main goal of the LN2 system is to provide cooling power for the argon condenser, the initial cool down of 
 the vessel and the detector, and all other services as needed.
 %
  Table~\ref{tbl:cryo-design-parameters} presents the list of 
-requirements for the cryogenic system for the single phase detector test at CERN.
+requirements for the DUNE-PT cryogenic system.
 %
 \begin{table}[htbp]
 \centering
