--- a/calibration.tex
+++ b/calibration.tex
@@ -1,6 +1,6 @@
 \label{calibration}
 %\subsection{Calibration}
-The design of the calibration system for the CERN single phase prototype detector pursues two principal goals. The first is to calibrate the detector itself to
+The design of the calibration system for DUNE-PT pursues two principal goals. The first is to calibrate the detector itself to
 provide high quality data for successive data analysis and the second is to test and optimize the calibration tools themselves for future
 use in the DUNE far detectors.
 
