--- a/nuplatform.tex
+++ b/nuplatform.tex
@@ -54,7 +54,7 @@ The requirements for alignment and survey of the TPC are under development. Sinc
 
 \subsection{Infrastructure}
 
-The inner detector and surrounding cryostat of the prototype detector will be located in a recessed pit in the floor of the extension of the EHN1 experimental hall.  However, additional space will be required for the installation and operation of the prototype.  This includes an unloading area, a clean room for assembly, and a control room to host computers to operate the detector components, readout the detector, and provide local storage of detector data.  Crane and forklift access will be required in the unloading zone and crane transport of detector components will be required between the clean room and recessed pit.  The control room will have to be accessible 24 hours a day and 7 days a week.
+The inner detector and surrounding cryostat of DUNE-PT will be located in a recessed pit in the floor of the extension of the EHN1 experimental hall.  However, additional space will be required for the installation and operation of DUNE-PT.  This includes an unloading area, a clean room for assembly, and a control room to host computers to operate the detector components, readout the detector, and provide local storage of detector data.  Crane and forklift access will be required in the unloading zone and crane transport of detector components will be required between the clean room and recessed pit.  The control room will have to be accessible 24 hours a day and 7 days a week.
 
 The experiment will rely on liquid nitrogen to provide cooling power for the argon condenser and the initial cool down of the vessel and the detector.  The area will have to be setup to receive regular tanker deliveries to a local dewar storage.  A distribution facility located in the experimental hall will be used to transfer the liquid nitrogen from the dewar system.  In addition, a liquid argon receiving facility which includes a storage dewar and an ambient vaporizer will be used to deliver liquid argon and gaseous argon to the cryostat.  Because of the risk of argon collecting in the pit, an exhaust pipe out of the pit will be required to vent the area.  The humidity and temperature in the experimental area will need to be controlled by air conditioning.   
 
