--- a/CERNproto.tex
+++ b/CERNproto.tex
@@ -48,11 +48,12 @@
 
 \date{\today}
 %\date{April 15, 2015}
-%	\input{authors}
-	\input{authors_template}
+	\input{150602_authors}
+%	\input{authors_template}
 
 \maketitle
 
+\centerline{submitted on behalf of the DUNE collaboration}
 
 %\SetWatermarkText{DRAFT}
 %\SetWatermarkLightness{0.8}
@@ -106,7 +107,7 @@
 	
 	
 \section{Schedule, Organization and Cost Estimate} % [$\sim$5 pages; {\color{red} Thomas/Greg}]}
-	\input{organ}
+	\input{150603_organ}
 
 \newpage
 \section{Summary}  % [$\sim$2 pages; {\color{red} Thomas/Greg}]}
