--- a/introduction.tex
+++ b/introduction.tex
@@ -89,13 +89,13 @@ to the proposed program.\\
 %detect neutrinos and search for proton decay.
 %The first 10~kton LAr TPC module is planned to be constructed underground on the time scale of 2022.
 
-The basic components of the liquid argon detector include a time projection chamber (TPC) housed in a cryostat which is connected to  
+The basic components of the liquid argon detector include a Time Projection Chamber (TPC) housed in a cryostat which is connected to  
 a cryogenics system. 
 %
-The cryostat contains the liquid argon target material and the cryogenic system keeps the liquid argon at a temperature of 89K, and maintains the required purity through a pump and filter system. A uniform electric field is created within the TPC volume between cathode planes and anode wire planes. Charged particles passing through the TPC release ionization electrons that drift to the anode wires. The bias voltage is set on the anode plane wires so that ionization electrons drift between the first several (induction) planes and is collected on the last (collection) plane. Readout electronics amplify and continuously digitize the induced waveforms on the sense wires at several MHz, and transmit these data to the DAQ system for analysis. The wire planes are oriented at different angles allowing a 3D reconstruction of the particle trajectories. In addition to these basic components, a photon detection system
-is included in the design to provide timing information for events not associated with the neutrino beam, enabling the study of proton decay and be more sensitive to galactic supernova neutrinos.
+The cryostat contains the liquid argon target material and the cryogenic system keeps the liquid argon at a temperature of 89K, and maintains the required purity through a pump and filter system. A 500 V/m uniform electric field is created within the TPC volume between cathode planes and anode wire planes. Charged particles passing through the TPC release ionization electrons that drift to the anode wires. The bias voltage is set on the anode plane wires so that ionization electrons drift between the first several (induction) planes and are collected on the last (collection) plane. Readout electronics amplify and continuously digitize the induced waveforms on the sense wires at several MHz, and transmit these data to the DAQ system for analysis. The wire planes are oriented at different angles allowing a 3D reconstruction of the particle trajectories. In addition to these basic components, a photon detection system
+is included in the design to provide timing information for events not associated with the neutrino beam, enabling the study of proton decay and be more sensitive to galactic supernova neutrinos.  The photon detection system will also provide timing information for cosmics which are important for calibration purposes.
 
-Our LAr detector design is characterized by a modular approach in which the LAr volume in the cryostat is instrumented with a number of identical anode wire plane assemblies (APA) and associated cathode plane assemblies (CPA). To a large extent, scaling from detector volumes containing a few of such modules  to several hundred should be feasible with low and predictable risk.\\
+Our LAr detector design is characterized by a modular approach in which the LAr volume in the cryostat is instrumented with a number of identical Anode wire Plane Assemblies (APA) and associated Cathode Plane Assemblies (CPA). To a large extent, scaling from detector volumes containing a few of such modules  to several hundred should be feasible with low and predictable risk.\\
 
 
 
